Updates to getting started and .net client (#393)
* Remove deprecated .NET Core library

* Mark which library is .NET Core

* Move http read stream request to tabbed section

* Move http read single event request to tabbed section

* Ensure that Java examples are not empty and they look correct

* Update description to point to native clients as well

* Update create subscription description to be more verbose and clear

* Make example tabs order consistent, remove comments

* Add information about key difference in persistent subscription

* Add full code example for .net persistent subscription

* Extract separate samples in dotnet overview, first json format & plain

* Add implicit prerequisite for dotnet client overview

* Add missing methods and update descriptions

* Extract delete stream in dotnet to separate page

* Rename menu element to stay consistent with http api

* Update description and add example to create new stream & events .net

* Set fix code snippet for connection setup

This code snippet is so important that it should not be based on second repository. Any mutation to Program.cs in second repository will influence this part.

* Add new examples and merge two sections

* Add example on transactions

* Update users management section

* Update security page by modern security standards

* Extract users management code to separate files

* Extract writing events code to separate files

* Move code examples to .net examples repo

* Polish changes and reverts

* Final prep for merge

Co-authored-by: Chris Chinchilla <chriswhward@gmail.com>

--- a/toc.yml
+++ b/toc.yml
@@ -14,10 +14,12 @@
       href: dotnet-api/index.md
     - name: Connecting to a server
       href: dotnet-api/connecting-to-a-server.md
-    - name: Streams
+    - name: Creating and writing to a stream
       href: dotnet-api/streams.md
     - name: Reading events
       href: dotnet-api/reading-events.md
+    - name: Deleting a stream
+      href: dotnet-api/deleting-a-stream.md
     - name: Persistent subscriptions
       href: dotnet-api/persistent-subscriptions.md
     - name: Competing consumers
@@ -32,6 +34,8 @@
       href: dotnet-api/stream-metadata.md
     - name: User management
       href: dotnet-api/users.md
+    - name: Security
+      href: dotnet-api/security.md
     - name: Code documentation
       href: dotnet-api/code/toc.yml
 - name: HTTP API
