Updates to setting up cluster, before production tips and update code samples (#392)
* Add docker-compose to install

* Improve getting started step 1 description and .net examples

* Update ports to match default ports

* Update native tcp client snippets for cluster connection

* Add run in docker compose example

* Ensure all examples has the same dns to avoid typos

* Improve navigation nesting

* Add production checklist

* TLS certificate for docker image

* Move code examples to .net examples repo

* Rename Docker Compose files

Co-authored-by: Chris Chinchilla <chriswhward@gmail.com>

--- a/toc.yml
+++ b/toc.yml
@@ -138,6 +138,8 @@
       href: server/64-bit-index.md
     - name: Scavenging
       href: server/scavenging.md
+    - name: Production checklist
+      href: server/production-checklist.md
     - name: Setting up Varnish in Linux
       href: server/setting-up-varnish-in-linux.md
     - name: Uninstalling Event Store
